[gd_scene load_steps=5 format=2]

[ext_resource path="res://UI/theme/greyTheme.tres" type="Theme" id=1]
[ext_resource path="res://UI/GameUI/conversationMenu/ConvoMemberBox.tscn" type="PackedScene" id=2]
[ext_resource path="res://UI/GameUI/conversationMenu/ConvoBox.tscn" type="PackedScene" id=3]
[ext_resource path="res://UI/GameUI/conversationMenu/conversationMenu.gd" type="Script" id=4]

[node name="conversationMenu" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
mouse_filter = 2
script = ExtResource( 4 )

[node name="back" type="Panel" parent="."]
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
margin_left = -550.0
margin_top = -700.0
margin_right = 550.0
rect_min_size = Vector2( 1100, 700 )
theme = ExtResource( 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="hAlign" type="HBoxContainer" parent="back"]
anchor_right = 1.0
anchor_bottom = 1.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="memberCell" type="VBoxContainer" parent="back/hAlign"]
margin_right = 360.0
margin_bottom = 700.0
rect_min_size = Vector2( 360, 0 )
size_flags_vertical = 3

[node name="ConvoMemberBox" parent="back/hAlign/memberCell" instance=ExtResource( 2 )]

[node name="sAlign" type="ScrollContainer" parent="back/hAlign"]
margin_left = 364.0
margin_right = 1100.0
margin_bottom = 700.0
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="convoCell" type="VBoxContainer" parent="back/hAlign/sAlign"]
margin_right = 724.0
margin_bottom = 904.0
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="ConvoBox" parent="back/hAlign/sAlign/convoCell" instance=ExtResource( 3 )]
anchor_right = 0.0
anchor_bottom = 0.0
margin_right = 724.0
margin_bottom = 96.0

[node name="ConversationBox2" type="PanelContainer" parent="back/hAlign/sAlign/convoCell"]
margin_top = 100.0
margin_right = 724.0
margin_bottom = 325.0
rect_min_size = Vector2( 0, 96 )
size_flags_horizontal = 3
theme = ExtResource( 1 )

[node name="VBoxContainer" type="VBoxContainer" parent="back/hAlign/sAlign/convoCell/ConversationBox2"]
margin_left = 7.0
margin_top = 7.0
margin_right = 717.0
margin_bottom = 218.0

[node name="Label" type="Label" parent="back/hAlign/sAlign/convoCell/ConversationBox2/VBoxContainer"]
margin_right = 710.0
margin_bottom = 25.0
text = "Character Name Goes Gere"

[node name="HBoxContainer" type="HBoxContainer" parent="back/hAlign/sAlign/convoCell/ConversationBox2/VBoxContainer"]
margin_top = 29.0
margin_right = 710.0
margin_bottom = 211.0

[node name="Panel" type="Panel" parent="back/hAlign/sAlign/convoCell/ConversationBox2/VBoxContainer/HBoxContainer"]
modulate = Color( 1, 1, 1, 0 )
margin_right = 30.0
margin_bottom = 182.0
rect_min_size = Vector2( 30, 0 )
size_flags_vertical = 3

[node name="RichTextLabel4" type="RichTextLabel" parent="back/hAlign/sAlign/convoCell/ConversationBox2/VBoxContainer/HBoxContainer"]
margin_left = 34.0
margin_right = 710.0
margin_bottom = 182.0
rect_clip_content = false
size_flags_horizontal = 3
size_flags_vertical = 3
theme = ExtResource( 1 )
text = "\"Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.\""
fit_content_height = true
scroll_active = false
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ConversationBox3" type="PanelContainer" parent="back/hAlign/sAlign/convoCell"]
margin_top = 329.0
margin_right = 724.0
margin_bottom = 450.0
rect_min_size = Vector2( 0, 96 )
size_flags_horizontal = 3
theme = ExtResource( 1 )

[node name="VBoxContainer" type="VBoxContainer" parent="back/hAlign/sAlign/convoCell/ConversationBox3"]
margin_left = 7.0
margin_top = 7.0
margin_right = 717.0
margin_bottom = 114.0

[node name="Label" type="Label" parent="back/hAlign/sAlign/convoCell/ConversationBox3/VBoxContainer"]
margin_right = 710.0
margin_bottom = 25.0
text = "Character Name Goes Gere"

[node name="HBoxContainer" type="HBoxContainer" parent="back/hAlign/sAlign/convoCell/ConversationBox3/VBoxContainer"]
margin_top = 29.0
margin_right = 710.0
margin_bottom = 107.0

[node name="Panel" type="Panel" parent="back/hAlign/sAlign/convoCell/ConversationBox3/VBoxContainer/HBoxContainer"]
modulate = Color( 1, 1, 1, 0 )
margin_right = 30.0
margin_bottom = 78.0
rect_min_size = Vector2( 30, 0 )
size_flags_vertical = 3

[node name="RichTextLabel4" type="RichTextLabel" parent="back/hAlign/sAlign/convoCell/ConversationBox3/VBoxContainer/HBoxContainer"]
margin_left = 34.0
margin_right = 710.0
margin_bottom = 78.0
rect_clip_content = false
size_flags_horizontal = 3
size_flags_vertical = 3
theme = ExtResource( 1 )
text = "More Random stuff

With Spaces this time."
fit_content_height = true
scroll_active = false
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ConversationBox4" type="PanelContainer" parent="back/hAlign/sAlign/convoCell"]
margin_top = 454.0
margin_right = 724.0
margin_bottom = 550.0
rect_min_size = Vector2( 0, 96 )
size_flags_horizontal = 3
theme = ExtResource( 1 )

[node name="VBoxContainer" type="VBoxContainer" parent="back/hAlign/sAlign/convoCell/ConversationBox4"]
margin_left = 7.0
margin_top = 7.0
margin_right = 717.0
margin_bottom = 89.0

[node name="Label" type="Label" parent="back/hAlign/sAlign/convoCell/ConversationBox4/VBoxContainer"]
margin_right = 710.0
margin_bottom = 25.0
text = "Character Name Goes Gere"

[node name="HBoxContainer" type="HBoxContainer" parent="back/hAlign/sAlign/convoCell/ConversationBox4/VBoxContainer"]
margin_top = 29.0
margin_right = 710.0
margin_bottom = 55.0

[node name="Panel" type="Panel" parent="back/hAlign/sAlign/convoCell/ConversationBox4/VBoxContainer/HBoxContainer"]
modulate = Color( 1, 1, 1, 0 )
margin_right = 30.0
margin_bottom = 26.0
rect_min_size = Vector2( 30, 0 )
size_flags_vertical = 3

[node name="RichTextLabel4" type="RichTextLabel" parent="back/hAlign/sAlign/convoCell/ConversationBox4/VBoxContainer/HBoxContainer"]
margin_left = 34.0
margin_right = 710.0
margin_bottom = 26.0
rect_clip_content = false
size_flags_horizontal = 3
size_flags_vertical = 3
theme = ExtResource( 1 )
text = "Conversation Goes Here."
fit_content_height = true
scroll_active = false
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ConversationBox5" type="PanelContainer" parent="back/hAlign/sAlign/convoCell"]
margin_top = 554.0
margin_right = 724.0
margin_bottom = 779.0
rect_min_size = Vector2( 0, 96 )
size_flags_horizontal = 3
theme = ExtResource( 1 )

[node name="VBoxContainer" type="VBoxContainer" parent="back/hAlign/sAlign/convoCell/ConversationBox5"]
margin_left = 7.0
margin_top = 7.0
margin_right = 717.0
margin_bottom = 218.0

[node name="Label" type="Label" parent="back/hAlign/sAlign/convoCell/ConversationBox5/VBoxContainer"]
margin_right = 710.0
margin_bottom = 25.0
text = "Character Name Goes Gere"

[node name="HBoxContainer" type="HBoxContainer" parent="back/hAlign/sAlign/convoCell/ConversationBox5/VBoxContainer"]
margin_top = 29.0
margin_right = 710.0
margin_bottom = 211.0

[node name="Panel" type="Panel" parent="back/hAlign/sAlign/convoCell/ConversationBox5/VBoxContainer/HBoxContainer"]
modulate = Color( 1, 1, 1, 0 )
margin_right = 30.0
margin_bottom = 182.0
rect_min_size = Vector2( 30, 0 )
size_flags_vertical = 3

[node name="RichTextLabel4" type="RichTextLabel" parent="back/hAlign/sAlign/convoCell/ConversationBox5/VBoxContainer/HBoxContainer"]
margin_left = 34.0
margin_right = 710.0
margin_bottom = 182.0
rect_clip_content = false
size_flags_horizontal = 3
size_flags_vertical = 3
theme = ExtResource( 1 )
text = "\"Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.\""
fit_content_height = true
scroll_active = false
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ConversationBox6" type="PanelContainer" parent="back/hAlign/sAlign/convoCell"]
margin_top = 783.0
margin_right = 724.0
margin_bottom = 904.0
rect_min_size = Vector2( 0, 96 )
size_flags_horizontal = 3
theme = ExtResource( 1 )

[node name="VBoxContainer" type="VBoxContainer" parent="back/hAlign/sAlign/convoCell/ConversationBox6"]
margin_left = 7.0
margin_top = 7.0
margin_right = 717.0
margin_bottom = 114.0

[node name="Label" type="Label" parent="back/hAlign/sAlign/convoCell/ConversationBox6/VBoxContainer"]
margin_right = 710.0
margin_bottom = 25.0
text = "Character Name Goes Gere"

[node name="HBoxContainer" type="HBoxContainer" parent="back/hAlign/sAlign/convoCell/ConversationBox6/VBoxContainer"]
margin_top = 29.0
margin_right = 710.0
margin_bottom = 107.0

[node name="Panel" type="Panel" parent="back/hAlign/sAlign/convoCell/ConversationBox6/VBoxContainer/HBoxContainer"]
modulate = Color( 1, 1, 1, 0 )
margin_right = 30.0
margin_bottom = 78.0
rect_min_size = Vector2( 30, 0 )
size_flags_vertical = 3

[node name="RichTextLabel4" type="RichTextLabel" parent="back/hAlign/sAlign/convoCell/ConversationBox6/VBoxContainer/HBoxContainer"]
margin_left = 34.0
margin_right = 710.0
margin_bottom = 78.0
rect_clip_content = false
size_flags_horizontal = 3
size_flags_vertical = 3
theme = ExtResource( 1 )
text = "More Random stuff

With Spaces this time."
fit_content_height = true
scroll_active = false
__meta__ = {
"_edit_use_anchors_": false
}
